--- a/css/sb-admin.css
+++ b/css/sb-admin.css
@@ -9,7 +9,7 @@ body {
 
 @media(min-width:768px) {
     body {
-        padding-top: 50px;
+        padding-top: 1px;
     }
 }
 
@@ -18,7 +18,9 @@ body {
 /* ------------------------------- */
 
 #wrapper {
-    width: 100%;
+    margin: 0 0 0 153px;
+    min-height: 300px;
+    position: inherit;
 }
 
 #page-wrapper {
@@ -30,9 +32,9 @@ body {
 @media(min-width:768px) {
     #page-wrapper {
         position: inherit;
-        margin: 0 0 0 250px;
+        margin: 15px 0 0 98px;
         padding: 0 30px;
-        min-height: 1300px;
+        min-height: 100%;
         border-left: 1px solid #e7e7e7;
     }
 }
@@ -134,10 +136,10 @@ body {
 
 @media(min-width:768px) {
     .navbar-static-side {
-        z-index: 1;
+        margin-top: 58px;
         position: absolute;
         width: 250px;
-        margin-top: 51px;
+        z-index: 1;
     }
 
     .navbar-top-links .dropdown-messages,
